--- a/apps/prueba2/templates/consulta_cargos.html
+++ b/apps/prueba2/templates/consulta_cargos.html
@@ -33,49 +33,53 @@
                 <tr>
                     <th>Nombre del cargo</th>
                     <th>Descripcion</th>
+                    <th>Estado</th>
                     <th>Hay vacantes?</th>
                     <th>Opciones</th>
                 </tr>
                 </thead>
                 <tbody>
                 {% for cargo in lista_cargos %}
-                    {% if cargo.estado %}
-                        <tr>
-                            <td>{{ cargo.name }}</td>
-                            <td>{{ cargo.description }}</td>
-                            <td>{{ cargo.has_vacants|yesno:"Si,No" }}</td>
-                            <td>
-                                <div class="btn-group">
+                    <tr>
+                        <td>{{ cargo.name }}</td>
+                        <td>{{ cargo.description }}</td>
+                        {% if cargo.estado %}
+                            <td>ACTIVO</td>
+                        {% else %}
+                            <td>INACTIVO</td>
+                        {% endif %}
+                        <td>{{ cargo.has_vacants|yesno:"Si,No" }}</td>
+                        <td>
+                            <div class="btn-group">
 
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
-                                            aria-expanded="false">
-                                        Acciones
-                                        <span class="caret"></span>
-                                        <span class="sr-only">Toggle Dropdown</span>
-                                        <div class="ripple-container"></div>
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                        aria-expanded="false">
+                                    Acciones
+                                    <span class="caret"></span>
+                                    <span class="sr-only">Toggle Dropdown</span>
+                                    <div class="ripple-container"></div>
 
-                                    </button>
-                                    <ul class="dropdown-menu" role="menu">
-                                        <li><a href="{% url 'modificar_cargo' cargo.id %}">Consultar/Modificar</a></li>
+                                </button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="{% url 'modificar_cargo' cargo.id %}">Consultar/Modificar</a></li>
 
-                                        <li class="divider"></li>
-                                        {% if cargo.estado %}
-                                            <li><a href="#" data-toggle="modal" data-target="#modal-default"
-                                                   data-url="{% url 'desactivar_cargo' cargo.id %}">Desactivar</a></li>
-                                        {% else %}
-                                            <li><a href="#" data-toggle="modal" data-target="#modal-default"
-                                                   data-url="{% url 'activar_cargo' cargo.id %}">Activar</a></li>
-                                        {% endif %}
+                                    <li class="divider"></li>
+                                    {% if cargo.estado %}
+                                        <li><a class="delete-cargo" href="#" data-toggle="modal" data-target="#deactivate-modal"
+                                               data-url="{% url 'desactivar_cargo' cargo.id %}">Desactivar</a></li>
+                                    {% else %}
+                                        <li><a class="activate-cargo" href="#" data-toggle="modal" data-target="#activate-modal"
+                                               data-url="{% url 'activar_cargo' cargo.id %}">Activar</a></li>
+                                    {% endif %}
 
-                                    </ul>
-                                </div>
+                                </ul>
+                            </div>
 
-                            </td>
-                            <!--
-                    <td><a href="{% url 'modificar_cargo' cargo.id %}">Modificar</a></td>
-                -->
-                        </tr>
-                    {% endif %}
+                        </td>
+                        <!--
+                <td><a href="{% url 'modificar_cargo' cargo.id %}">Modificar</a></td>
+            -->
+                    </tr>
                 {% endfor %}
                 </tbody>
 
@@ -84,7 +88,7 @@
         <!-- /.box-body -->
     </div>
 
-    <div class="modal fade" id="modal-default">
+    <div class="modal fade" id="deactivate-modal">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
@@ -97,7 +101,29 @@
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-primary">Eliminar</button>
+                    <button type="submit" class="btn btn-primary" onclick="deactivateStatus()">Eliminar</button>
+                </div>
+            </div>
+            <!-- /.modal-content -->
+        </div>
+        <!-- /.modal-dialog -->
+    </div>
+    <!-- /.modal -->
+
+    <div class="modal fade" id="activate-modal">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span></button>
+                    <h4 class="modal-title">Activar cargo</h4>
+                </div>
+                <div class="modal-body">
+                    <p>¿Está seguro que desea activar este cargo?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default pull-left" data-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-primary" onclick="activateStatus()">Activar</button>
                 </div>
             </div>
             <!-- /.modal-content -->
@@ -111,6 +137,47 @@
 
 {% block js %}
     <script type="text/javascript">
+
+    var deactivate_url = "";
+    var activate_url = "";
+
+    $(document).ready(function () {
+        $('.delete-cargo').click(function () {
+            deactivate_url = $(this).attr('data-url');
+        });
+
+        $('.activate-cargo').click(function(){
+            activate_url = $(this).attr('data-url');
+        });
+    });
+
+    function deactivateStatus(){
+
+        $.ajax({
+            url: deactivate_url,
+            data: {},
+            dataType: 'html',
+            success: function (data) {
+                location.reload(true);
+            }
+        });
+
+        $("#deactivate-modal").hide();
+    }
+
+    function activateStatus(){
+
+        $.ajax({
+            url: activate_url,
+            data: {},
+            dataType: 'html',
+            success: function (data) {
+                location.reload(true);
+            }
+        });
+
+        $("#activate-modal").hide();
+    }
 
 
     </script>
