--- a/apps/employees_and_jobs/templates/consulta_empleados.html
+++ b/apps/employees_and_jobs/templates/consulta_empleados.html
@@ -112,10 +112,8 @@
 
     {% if action == 'roster' %}
         <div class="roster" data-url="{% url 'creacion_nomina'%}" >
-
             <button type="button" class="btn btn-block btn-success btn-lg"
             data-toggle="modal" data-target="#roster-modal" href="#">GENERAR NOMINA</button>
-
         </div>
     {% endif %}
 
@@ -170,7 +168,7 @@
                 <div class="modal-header">
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span></button>
-                    <h4 class="modal-title">Activar cargo</h4>
+                    <h4 class="modal-title">Generar nómina</h4>
                 </div>
                 <div class="modal-body">
                     <p>¿Generar nómina?</p>
