--- a/templates/base.html
+++ b/templates/base.html
@@ -25,6 +25,7 @@
     <!-- Google Font -->
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+    <link rel="stylesheet" href="{% static 'dist/css/personalised_css.css' %}">
     {{ form.media.css }}
     {% block css %}{% endblock css %}
 </head>
