--- a/templates/cuentas/crearCuenta.html
+++ b/templates/cuentas/crearCuenta.html
@@ -56,15 +56,21 @@
                         <!-- /.input group -->
                     </div>
                     <div class="form-group">
-                        <label>Cobro Total</label>
-                        <input type="text" class="form-control">
+                        <label>Plazo hasta</label>
+                        <div class="input-group date">
+                            <div class="input-group-addon">
+                                <i class="fa fa-calendar"></i>
+                            </div>
+                            <input type="text" class="form-control pull-right" id="datepicker">
+                        </div>
+                        <!-- /.input group -->
                     </div>
                     <td>
                         <button type="button" class="btn btn-block btn-info"> Registrar</button>
                     </td>
                 </div>
             </form>
-        </div>        
+        </div>
         <!-- Columna Derecha -->
         <div class="col-md-5 col-md-offset-1">
             <!-- Editable table -->
@@ -97,7 +103,7 @@
                                 <td>
                                     <span class="table-remove">
                                         <button type="button" class="btn btn-info btn-rounded btn-sm my-0 ">Borrar </button>
-                                        
+
                                     </span>
                                 </td>
                             </tr>
@@ -157,6 +163,19 @@
                                 </td>
                             </tr>
                         </table>
+                        <div class="container-fluid">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label style="margin-top: 2rem; text-align: center ">Cobro Total</label>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="form-group">
+                                        <input style="pointer-events: none" type="text" class="form-control">
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
