Inventario (model html view urls) Created

--- a/templates/inventario/landing.html
+++ b/templates/inventario/landing.html
@@ -5,6 +5,9 @@
 
 {% block contenido_panel %}
 
+<a href="/inventario/entradas">
+
+
 <div class="col-md-3 col-sm-6 col-xs-12 btn">
           <div class="info-box">
             <span class="info-box-icon bg-aqua"><i class="fa fa-check-square-o"></i></span>
@@ -16,7 +19,9 @@
           </div>
           <!-- /.info-box -->
         </div>
+</a>
 
+<a href="/inventario/list">
 <div class="col-md-3 col-sm-6 col-xs-12 btn">
           <div class="info-box">
             <span class="info-box-icon bg-aqua"><i class="fa fa-dropbox"></i></span>
@@ -28,5 +33,6 @@
           </div>
           <!-- /.info-box -->
         </div>
+</a>
 
 {% endblock contenido_panel %}
