Fixed some links and control bar

--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <header class="main-header">
 
         <!-- Logo -->
-        <a href="index2.html" class="logo">
+        <a href="/inventario/" class="logo">
             <!-- mini logo for sidebar mini 50x50 pixels -->
             <span class="logo-mini">E<b>R</b>P</span>
             <!-- logo for regular state and mobile devices -->
@@ -108,7 +108,7 @@
             Universidad del Valle
         </div>
         <!-- Default to the left -->
-        <strong>Copyright &copy; 2018 <a href="#">ERPAdmin</a>.</strong> Todos los derechos reservados.
+        <strong>Copyright &copy; 2019 <a href="#">ERPAdmin</a>.</strong> Todos los derechos reservados.
     </footer>
 
     <!-- Control Sidebar -->
