--- a/templates/menu.html
+++ b/templates/menu.html
@@ -10,7 +10,7 @@
         <img src="dist/img/user-160x160.jpg" class="img-circle" alt="User Image">
       </div>-->
       <div class="pull-left info">
-        <p>Thanh Nguyen</p>
+        <p>Encargado de Inventario</p>
         <!-- Status -->
         <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
       </div>
@@ -18,21 +18,10 @@
 
     <!-- Sidebar Menu -->
     <ul class="sidebar-menu" data-widget="tree">
-      <li class="header">HEADER</li>
+      <li class="header">Modulo Inventario</li>
       <!-- Optionally, you can add icons to the links -->
-      <li class="active"><a href="#"><i class="fa fa-link"></i> <span>Link</span></a></li>
-      <li><a href="#"><i class="fa fa-link"></i> <span>Another Link</span></a></li>
-      <li class="treeview">
-        <a href="#"><i class="fa fa-link"></i> <span>Multilevel</span>
-          <span class="pull-right-container">
-            <i class="fa fa-angle-left pull-right"></i>
-          </span>
-        </a>
-        <ul class="treeview-menu">
-          <li><a href="#">Link in level 2</a></li>
-          <li><a href="#">Link in level 2</a></li>
-        </ul>
-      </li>
+      <li><a href="/inventario/entradas"><i class="fa fa-check-square-o"></i> <span>Entradas</span></a></li>
+      <li><a href="/inventario/list"><i class="fa fa-dropbox"></i> <span>Inventario</span></a></li>
     </ul>
     <!-- /.sidebar-menu -->
   </section>
