--- a/templates/base.html
+++ b/templates/base.html
@@ -88,7 +88,7 @@
                     <div class="col-md-12">
                         <div class="box box-primary">
                             <div class="box-header">
-                                <h3 class="box-title"></h3>
+                                <h3 class="box-title">{% block titulo_panel %}{% endblock titulo_panel %}</h3>
                             </div>
                             <div class="box-body">
                                 {% block contenido_panel %}{% endblock contenido_panel %}
